<resources>
    <string name="app_name">Stejob Resume</string>
    <string name="url_approval">#DooNvHOKJGK455%$?vfdliuhVcalahante$$</string>
    <string name="url_address">http://stjobs.ir/stejob-resume/</string>
    <string name="phone_number">+60 14 825 8785</string>
    <string name="phone_number_nv">+98 917 338 1951</string>
    <string name="email">stejob.reza@gmail.com</string>
    <string name="email_nv">rezaesr@gmail.com</string>
    <string name="my_name">Reza Stejob</string>
    <string name="resume_download_link">http://www.stjobs.ir/stejob-resume/StejobResume.pdf</string>
    <string name="resume_download_link_nv">http://www.stjobs.ir/stejob-resume/StejobResumeNv.pdf</string>
    <string name="github_address" formatted="false">https://www.github.com/Stejob</string>
    <string name="stack_overflow_address" formatted="false">https://www.stackoverflow.com/users/9894217/reza</string>
    <string name="linkedin_address" formatted="false">https://www.linkedin.com/in/reza-stejob-821a5b2</string>
    <string name="facebook_address" formatted="false">https://www.facebook.com/profile.php?id=100077567395633</string>
    <string name="mw_guest_download_link" formatted="false">http://www.stjobs.ir/MyWeddingInvitationSite/download/invitedApp/InvitationAppMW.apk</string>
    <string name="mw_main_download_link" formatted="false">http://www.stjobs.ir/MyWeddingInvitationSite/download/invitedApp/BaseAppMW.apk</string>
    <string name="sic_download_link" formatted="false">http://www.tadbirgaranfars.ir/smart-visit-card/download/tadbirgaran.apk</string>
    <string name="shano_download_link" formatted="false">http://www.stjobs.ir/shano/download/shaano-compact.apk</string>
    <string name="simi" formatted="false">"https://www.simi.ir/?lang=en"</string>
    <string name="uni" formatted="false">"https://www.iaushiraz.ac.ir/en/2"</string>
    <string name="uni_degree_web_address" formatted="false">http://www.stjobs.ir/Certifications/degreeSite.jpg</string>
    <string name="android_newer_degree_web_address" formatted="false">http://www.stjobs.ir/Certifications/android2Site.jpg</string>
    <string name="android_older_degree_web_address" formatted="false">http://www.stjobs.ir/Certifications/android1Site.jpg</string>
    <string name="six_sigma_degree_web_address_crtf_1" formatted="false">http://www.stjobs.ir/Certifications/sixSigmaSite.jpg</string>
    <string name="iso_degree_web_address_crtf_2" formatted="false">http://www.stjobs.ir/Certifications/isoSite.jpg</string>
    <string name="ims_degree_web_address_crtf_3" formatted="false">http://www.stjobs.ir/Certifications/IMSSite.jpg</string>
    <string name="primavera_degree_web_address_crtf_4" formatted="false">http://www.stjobs.ir/Certifications/primaveraSite.jpg</string>
    <string name="dashboard_web_address_work_sample_1" formatted="false">http://www.stjobs.ir/worksamples/StejobDashboard.jpg</string>
    <string name="table_web_address_work_sample_2" formatted="false">http://www.stjobs.ir/worksamples/StejobTable.jpg</string>
    <string name="report_web_address_work_sample_3" formatted="false">http://www.stjobs.ir/worksamples/StejobReport.jpg</string>
    <string name="dashboard_web_address_header_1" formatted="false">Dashboard work sample</string>
    <string name="table_web_address_header_2" formatted="false">Table work sample</string>
    <string name="report_web_address_header_3" formatted="false">Pivot table report work sample</string>
    <string name="anypal_web_address_work_sample_1" formatted="false">http://www.stjobs.ir/worksamples/anypal/AnyPal1.jpg</string>
    <string name="anypal_web_address_work_sample_2" formatted="false">http://www.stjobs.ir/worksamples/anypal/AnyPal2.jpg</string>
    <string name="anypal_web_address_work_sample_3" formatted="false">http://www.stjobs.ir/worksamples/anypal/AnyPal3.jpg</string>
    <string name="anypal_web_address_work_sample_4" formatted="false">http://www.stjobs.ir/worksamples/anypal/AnyPal4.jpg</string>
    <string name="circles_web_address_work_sample_1" formatted="false">http://www.stjobs.ir/worksamples/circles/circles1.jpg</string>
    <string name="circles_web_address_work_sample_2" formatted="false">http://www.stjobs.ir/worksamples/circles/circles2.jpg</string>
    <string name="circles_web_address_work_sample_3" formatted="false">http://www.stjobs.ir/worksamples/circles/circles3.jpg</string>
    <string name="mw_web_address_work_sample_1" formatted="false">http://www.stjobs.ir/worksamples/mw/mw1.jpg</string>
    <string name="mw_web_address_work_sample_2" formatted="false">http://www.stjobs.ir/worksamples/mw/mw2.jpg</string>
    <string name="mw_web_address_work_sample_3" formatted="false">http://www.stjobs.ir/worksamples/mw/mw3.jpg</string>
    <string name="mw_web_address_work_sample_4" formatted="false">http://www.stjobs.ir/worksamples/mw/mw4.jpg</string>
    <string name="mw_web_address_work_sample_5" formatted="false">http://www.stjobs.ir/worksamples/mw/mw5.jpg</string>
    <string name="mw_web_address_work_sample_6" formatted="false">http://www.stjobs.ir/worksamples/mw/mw6.jpg</string>
    <string name="mw_web_address_work_sample_7" formatted="false">http://www.stjobs.ir/worksamples/mw/mw7.jpg</string>
    <string name="mw_web_address_work_sample_8" formatted="false">http://www.stjobs.ir/worksamples/mw/mw8.jpg</string>
    <string name="mw_web_address_work_sample_9" formatted="false">http://www.stjobs.ir/worksamples/mw/mw9.jpg</string>
    <string name="mw_web_address_work_sample_10" formatted="false">http://www.stjobs.ir/worksamples/mw/mw10.jpg</string>
    <string name="shano_web_address_work_sample_1" formatted="false">http://www.stjobs.ir/worksamples/shano/shano1.jpg</string>
    <string name="shano_web_address_work_sample_2" formatted="false">http://www.stjobs.ir/worksamples/shano/shano2.jpg</string>
    <string name="shano_web_address_work_sample_3" formatted="false">http://www.stjobs.ir/worksamples/shano/shano3.jpg</string>
    <string name="shano_web_address_work_sample_4" formatted="false">http://www.stjobs.ir/worksamples/shano/shano4.jpg</string>
    <string name="sic_web_address_work_sample_1" formatted="false">http://www.stjobs.ir/worksamples/sic/sic1.jpg</string>
    <string name="sic_web_address_work_sample_2" formatted="false">http://www.stjobs.ir/worksamples/sic/sic2.jpg</string>
    <string name="sic_web_address_work_sample_3" formatted="false">http://www.stjobs.ir/worksamples/sic/sic3.jpg</string>
    <string name="email_response_subject">Reply from CV application</string>
    <string name="email_response_body">Dear Reza</string>
    <string name="location">C– 25– 09  VILLAWANGSAMAS  CONDO\nWANGSAM MAJU - KUALA LUMPUR</string>
    <string name="location_nv">Ma\'ali abad, Shiraz, Iran</string>
    <string name="resume">You can download my resume (PDF version) over here</string>
    <string name="location_on_map" formatted="false">>https://www.google.com/maps/place/Villa+Wangsamas,+Taman+Sri+Rampai,+53300+Kuala+Lumpur,+Wilayah+Persekutuan+Kuala+Lumpur,+Malaysia/@3.1947363,101.7338672,17z/data=!3m1!4b1!4m5!3m4!1s0x31cc3826af2655ff:0x7752a07ffa177d71!8m2!3d3.1947363!4d101.7360559</string>
    <string name="career_objective">A forward-thinking developer offering %s years of experience in building, integrating, testing and supporting Android applications for  mobile and tablet devices on the Android platform with benefit of Industrial engineering experiences. I am always looking to achieve client  satisfaction to earn long term business.</string>
    <string name="txt_splash_act">" Stejob  "</string>
    <string name="first_frag_header">HIGHLIGHTS</string>
    <string name="second_frag_header">PROFESSIONAL DEV. EXPERIENCES</string>
    <string name="third_frag_header">EDUCATIONS</string>
    <string name="forth_frag_header">OTHER EXPERIENCES AND SKILLS</string>
    <string name="fifth_frag_header">CERTIFICATIONS</string>
    <string name="sixth_frag_header">PERSONAL DETAIL</string>
    <string name="highlights_item_0"> Created 6+ fully functional applications for Android devices</string>
    <string name="highlights_item_1"> Experienced in PHP in order to creating databases and APIs related  to applications</string>
    <string name="highlights_item_2"> Extensive expertise in applying industrial engineering methods for the management and control of android development projects</string>
    <string name="highlights_item_3"> Known for writing efficient, maintainable and reusable code</string>
    <string name="highlights_item_4"> Proficient in design, data structures, problem-solving, and debugging</string>
    <string name="highlights_item_5"> Expert in the interaction between various devices and versions  of Android</string>
    <string name="highlights_item_6"> Experienced in various types of libraries such as Retrofit, Glide, Zxing, and different kinds of architectures such as MVVM and MVP</string>
    <string name="project_cyrcles_pay_header">CYRCLES PAY project (USA)</string>
    <string name="project_mw_header">MW project (my own startup)</string>
    <string name="project_anypal_header">ANYPAL project</string>
    <string name="project_shano_header">SHANO project</string>
    <string name="project_sic_header">SIC project</string>
    <string name="project_proceedings">Proceedings</string>
    <string name="project_descriptions">Descriptions</string>
    <string name="project_features">Features</string>
    <string name="project_cyrcles_pay_proceedings">cooperating remotely with Rodex Co. in CyrclesPay project as an android developer.</string>
    <string name="project_cyrcles_pay_descriptions">CyrclesPay is an application for Payments and financial transactions.</string>
    <string name="project_cyrcles_pay_features">utilization of Dev.Azure for remote project management.</string>
    <string name="project_mw_proceedings">provided startup idea, business planning, UI/UX designing, android coding, Server-side scripting in PHP, database designing and structuring in MySQL.</string>
    <string name="project_mw_descriptions">startup to invite and manage guests in special occasions and ceremonies.</string>
    <string name="project_mw_features">includes a variety of applications (inviting guests, guest management and system management), utilization of MVVM architecture, using a variety of libraries such as retrofit2, capable of creating and reading QRcodes, utilization of visual charts, using various animations in UI to deliver a simple user-friendly UI/UX.</string>
    <string name="project_anypal_proceedings">cooperating with Arman Negaran Fanavar Pars Co. in Anypal project led by android development team.</string>
    <string name="project_anypal_descriptions">Anypal is a startup application for introducing businesses and making secure payment systems.</string>
    <string name="project_anypal_features">utilization of Gitlab and Trello for remote project management,  in remote collaboration with other team members.</string>
    <string name="project_shano_proceedings">UI/UX designing, android coding, Server-side scripting in PHP, database designing related to project in MySQL.</string>
    <string name="project_shano_descriptions">inventory Control, purchase and sales management application for Shano lingerie store.</string>
    <string name="project_shano_features">utilization of MVVM architecture, using different libraries such as retrofit2 and etc., utilization of visual charts, using various animations in UI to deliver a simple user friendly UI/UX.</string>
    <string name="personal_competencies_1"> Proven ability for self-learning and eager to take on new challenges</string>
    <string name="personal_competencies_2"> Smart and creative in assigned responsibilities</string>
    <string name="personal_competencies_3"> Highly organized with a creative flair for project work</string>
    <string name="personal_competencies_4"> Contributing well to the development team</string>
</resources>