<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.PersonalDetailFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_app_extra_large"
            android:layout_marginTop="@dimen/margin_app_big"
            android:layout_marginBottom="@dimen/margin_app_low"
            android:background="@drawable/bd_view_pager">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:layout_marginStart="@dimen/margin_app_large"
                android:layout_marginEnd="@dimen/margin_app_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_app_large">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/margin_app_very_low">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_stars_24"
                            android:layout_marginEnd="@dimen/margin_app_low"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_competencies_1"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/margin_app_very_low">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_stars_24"
                            android:layout_marginEnd="@dimen/margin_app_low"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_competencies_2"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/margin_app_very_low">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_stars_24"
                            android:layout_marginEnd="@dimen/margin_app_low"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_competencies_3"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/margin_app_very_low">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_stars_24"
                            android:layout_marginEnd="@dimen/margin_app_low"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_competencies_4"/>
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_frag_header"
            android:background="?android:colorBackground"
            android:paddingLeft="@dimen/padding_app_normal"
            android:paddingRight="@dimen/padding_app_normal"
            android:text="@string/sixth_frag_header"
            android:textColor="@color/text_header_color"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/iv_icon_size"
            android:layout_height="@dimen/iv_icon_size"
            android:id="@+id/icon"
            android:background="@drawable/bg_icon_fragment"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_adb_40"
            android:layout_marginLeft="@dimen/margin_app_very_large"
            android:padding="@dimen/padding_app_low"
            android:scaleType="fitCenter"/>

    </RelativeLayout>
</layout>